# homeworks_aisd

homework3/task-1/: a.out  b1.cpp
homework3/task-1/report/: analyze_convergence.py  monte_carlo  monte_carlo_main.cpp  narrow_area_results.csv  plot_results.py  run  wide_area_results.csv
homework3/task-2/: ArrayGenerator.cpp  ArrayGenerator.h  SortTester.cpp  SortTester.h  main.cpp  plot_results.py  run
homework3/task-2/results/: README.md  experiment_report.txt  hybrid_almost.csv  hybrid_random.csv  hybrid_reverse.csv  sorting_experiment  standard_almost.csv  standard_random.csv  standard_reverse.csv  threshold_test.csv
homework3/task-3/: CMakeLists.txt  a.cpp  a.out  data_generator.h  main.cpp  sort_algorithms.h  sort_tester.h  sorting_performance_results.csv  visualize_results.py
seminars/sem09/: trash.cpp  trash2.cpp
